docs/04_Les_réseaux_dans_openshift/sources/l03p04/my-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  selector:
    app: olympic-medals-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
