docs/04_Les_réseaux_dans_openshift/sources/l03p04/my-edge-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-edge-route
spec:
  to:
    kind: Service
    name: my-clusterip-service
  tls:
    termination: edge
